feat: simplify input fetching, add number and date inputs

--- a/src/components/Form/Inputs/GenericInput.astro
+++ b/src/components/Form/Inputs/GenericInput.astro
@@ -1,15 +1,11 @@
 ---
-import { FormSchema } from "../types";
-import StringInput from "./StringInput.astro";
-import BooleanInput from "./BooleanInput.astro";
-import ArrayInput from "./ArrayInput.astro";
+import { Components, FormSchema } from "../types";
+import { GetInput } from "./util";
 
-const { schema, schemaKey } = Astro.props as { schema: FormSchema, schemaKey: string }
+const { schema, schemaKey, components } = Astro.props as { schema: FormSchema, schemaKey: string, components: Components }
 
 const Inputs = []
 const InputArgs = []
-
-console.log(schema)
 
 if (!schema.properties) {
     throw new Error("No properties found in schema")
@@ -28,19 +24,8 @@ Object.entries(schema.properties).forEach(([key, value]) => {
     let FormInput;
     let FormArgs: Record<string, any> = { title: value.title, name: inputKey }
 
-    if (value.type === 'string') {
-        FormInput = StringInput;
-    } else if (value.type === 'boolean') {
-        FormInput = BooleanInput;
-    } else if (value.type === 'array') {
-        FormInput = ArrayInput;
-        FormArgs = { ...FormArgs, items: value.items }
-    } else if (value.type === 'object') {
-        FormInput = Astro.self;
-        FormArgs = { ...FormArgs, schema: value, schemaKey: key };
-    } else {
-        throw new Error(`Unsupported input type: ${value.type}`);
-    }
+    FormInput = GetInput(value.type);
+    FormArgs = { ...FormArgs, schema: value, schemaKey: key, items: value.items, components };
 
     Inputs.push(
         FormInput
