--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,6 +25,14 @@ const schema = JSON.parse(`
 			"age": {
 				"type": "string",
 				"title": "Age"
+			},
+			"birthday": {
+				"type": "date",
+				"title": "Birthday"
+			},
+			"acceptsTerms": {
+				"type": "boolean",
+				"title": "Accept Terms of Service"
 			}
 		}
 	}
