--- a/src/components/Form/Form.astro
+++ b/src/components/Form/Form.astro
@@ -1,8 +1,18 @@
 ---
 import GenericInput from "./Inputs/GenericInput.astro";
-import { FormSchema } from "./types";
+import ArrayInput from "./Inputs/ArrayInput.astro";
+import BooleanInput from "./Inputs/BooleanInput.astro";
+import StringInput from "./Inputs/StringInput.astro";
+import { Components, FormSchema } from "./types";
 
-const { schema, action, method, classes } = Astro.props as { schema: FormSchema, action: string, method: 'post' | 'get', classes: string }
+const { schema, action, method, classes, customComponents } = Astro.props as { schema: FormSchema, action: string, method: 'post' | 'get', classes: string, customComponents: Components }
+
+const components: Components = {
+    Array: ArrayInput,
+    Boolean: BooleanInput,
+    String: StringInput,
+    ...customComponents
+}
 
 if (schema.type !== 'object') {
     throw new Error('Initial form schema must be an object')
@@ -10,5 +20,5 @@ if (schema.type !== 'object') {
 ---
 
 <form action={action} method={method} class={classes}>
-    <GenericInput schema={schema} />
+    <GenericInput schema={schema} components={components} />
 </form>
