feat: add submit input

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,6 +35,10 @@ const schema = JSON.parse(`
 				"title": "Accept Terms of Service"
 			}
 		}
+	},
+	"submit": {
+		"type": "submit",
+		"title": "Submit"
 	}
   }
 }
