--- a/src/components/Form/themes/default/ArrayInput.astro
+++ b/src/components/Form/themes/default/ArrayInput.astro
@@ -1,5 +1,5 @@
 ---
-import { FormSchema } from "../types";
+import { FormSchema } from "../../types";
 import GenericInput from "./GenericInput.astro";
 
 const { title, items } = Astro.props as { title: string, items: FormSchema }
