--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,59 +1,26 @@
 ---
+import schema from "../util/schema";
 import Form from "../components/Form/Form.astro";
-
-const schema = JSON.parse(`
-{
-  "type": "object",
-  "title": "Form",
-  "properties": {
-	"name": {
-	  "type": "string",
-	  "title": "Name"
-	},
-	"email": {
-	  "type": "string",
-	  "title": "Email"
-	},
-	"password": {
-	  "type": "string",
-	  "title": "Password"
-	},
-	"personalInfo": {
-		"type": "object",
-		"title": "Personal Info",
-		"properties": {
-			"age": {
-				"type": "string",
-				"title": "Age"
-			},
-			"birthday": {
-				"type": "date",
-				"title": "Birthday"
-			},
-			"acceptsTerms": {
-				"type": "boolean",
-				"title": "Accept Terms of Service"
-			}
-		}
-	},
-	"submit": {
-		"type": "submit",
-		"title": "Submit"
-	}
-  }
-}
-`)
+import tailwind from "../components/Form/themes/tailwind";
 
 ---
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro Forms Example</h1>
 
-		<Form schema={schema} action="/" method="post" />
-	</body>
+<html lang="en">
+
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width" />
+	<title>Astro Forms</title>
+</head>
+
+<body>
+	<div class="py-8">
+		<h1 class="font-bold text-2xl text-center">Astro Forms Example (TailwindCSS)</h1>
+
+		<div class="max-w-4xl mx-auto">
+			<Form schema={schema} theme={tailwind} action="/" method="post" />
+		</div>
+	</div>
+</body>
+
 </html>
