--- a/src/components/Form/themes/default/GenericInput.astro
+++ b/src/components/Form/themes/default/GenericInput.astro
@@ -2,46 +2,51 @@
 import { Theme, FormSchema } from "../../types";
 import { GetInput } from ".";
 
-const { schema, schemaKey, components } = Astro.props as { schema: FormSchema, schemaKey: string, components: Theme }
+const { schema, schemaKey, components } = Astro.props as {
+  schema: FormSchema;
+  schemaKey: string;
+  components: Theme;
+};
 
-const Inputs = []
-const InputArgs = []
+const Inputs = [];
+const InputArgs = [];
 
 if (!schema.properties) {
-    throw new Error("No properties found in schema")
+  throw new Error("No properties found in schema");
 }
 
-
 Object.entries(schema.properties).forEach(([key, value]) => {
-    let inputKey;
+  let inputKey;
 
-    if (schemaKey) {
-        inputKey = `${schemaKey}.${key}`
-    } else {
-        inputKey = key
-    }
+  if (schemaKey) {
+    inputKey = `${schemaKey}.${key}`;
+  } else {
+    inputKey = key;
+  }
 
-    let FormInput;
-    let FormArgs: Record<string, any> = { title: value.title, name: inputKey }
+  let FormInput;
+  let FormArgs: Record<string, any> = { title: value.title, name: inputKey };
 
-    FormInput = GetInput(value.type);
-    FormArgs = { ...FormArgs, schema: value, schemaKey: key, items: value.items, components };
+  FormInput = GetInput(value.type);
+  FormArgs = {
+    ...FormArgs,
+    schema: value,
+    schemaKey: key,
+    items: value.items,
+    components,
+  };
 
-    Inputs.push(
-        FormInput
-    );
+  Inputs.push(FormInput);
 
-    InputArgs.push({
-        key,
-        value,
-        ...FormArgs
-    })
-})
+  InputArgs.push({
+    key,
+    value,
+    ...FormArgs,
+  });
+});
 ---
 
 <div>
-    <h1>{schema.title}</h1>
-    {Inputs.map((Input, index) => (
-        <Input key={index} {...InputArgs[index]} />
-    ))}
+  <h1>{schema.title}</h1>
+  {Inputs.map((Input, index) => <Input key={index} {...InputArgs[index]} />)}
 </div>
