--- a/src/components/Form/themes/tailwind/Submit.astro
+++ b/src/components/Form/themes/tailwind/Submit.astro
@@ -1,6 +1,9 @@
 ---
-const { title } = Astro.props as { title: string }
-
+const { title } = Astro.props as { title: string };
 ---
 
-<button type="submit" class="px-3 py-2 bg-indigo-500 rounded-md hover:bg-indigo-600 transition-colors duration-150 text-white font-semibold">{title}</button>
+<button
+  type="submit"
+  class="px-3 py-2 bg-indigo-500 rounded-md hover:bg-indigo-600 transition-colors duration-150 text-white font-semibold"
+  >{title}
+</button>
