--- a/src/components/Form/themes/default/Submit.astro
+++ b/src/components/Form/themes/default/Submit.astro
@@ -1,6 +1,5 @@
 ---
-const { title } = Astro.props as { title: string }
-
+const { title } = Astro.props as { title: string };
 ---
 
 <button type="submit">{title}</button>
