--- a/src/components/Form/themes/tailwind/BooleanInput.astro
+++ b/src/components/Form/themes/tailwind/BooleanInput.astro
@@ -1,9 +1,13 @@
 ---
 import InputLayout from "./InputLayout.astro";
 
-const { schema, name } = Astro.props as { schema: FormSchema, name: string }
+const { schema, name } = Astro.props as { schema: FormSchema; name: string };
 ---
 
 <InputLayout schema={schema} name={name}>
-    <input type="checkbox" name={name} class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded" />
+  <input
+    type="checkbox"
+    name={name}
+    class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded"
+  />
 </InputLayout>
