--- a/packages/astro-forms/themes/tailwind/InputLayout.astro
+++ b/packages/astro-forms/themes/tailwind/InputLayout.astro
@@ -5,15 +5,14 @@ const { schema, name } = Astro.props as { schema: FormSchema; name: string };
 ---
 
 <div>
-  <label for={name} class="block text-sm font-medium text-gray-700"
-    >{schema.title}
+  <label for={name} class="block text-sm font-medium text-gray-700">{schema.title}
   </label>
   <div class="mt-1">
     <slot></slot>
   </div>
   {schema.subtitle && (
-    <p class="mt-2 text-sm text-gray-500" id="email-description">
-      {schema.subtitle}
-    </p>
+  <p class="mt-2 text-sm text-gray-500" id="description">
+    {schema.subtitle}
+  </p>
   )}
 </div>
