--- a/packages/astro-forms/Form.astro
+++ b/packages/astro-forms/Form.astro
@@ -1,13 +1,15 @@
 ---
 import { GenericTheme } from "./Themes";
 import { Theme, FormSchema } from "./types";
+import { flatten } from "./util";
 
-const { schema, action, method, classes, theme } = Astro.props as {
+const { schema, action, method, classes, theme, data } = Astro.props as {
   schema: FormSchema;
   action: string;
   method: "post" | "get";
   classes: string;
   theme: Theme;
+  data: Record<string, any>
 };
 
 const components: Theme = {
@@ -18,8 +20,10 @@ const components: Theme = {
 if (schema.type !== "object") {
   throw new Error("Initial form schema must be an object");
 }
+
+const flattenedData = flatten(data);
 ---
 
 <form action={action} method={method} class={classes}>
-  <components.Generic schema={schema} components={components} />
+  <components.Generic schema={schema} components={components} data={flattenedData} />
 </form>
