--- a/packages/astro-forms/themes/tailwind/DateInput.astro
+++ b/packages/astro-forms/themes/tailwind/DateInput.astro
@@ -1,13 +1,11 @@
 ---
+import { FormSchema } from "../../types";
 import InputLayout from "./InputLayout.astro";
 
-const { schema, name } = Astro.props as { schema: FormSchema; name: string };
+const { schema, name, value } = Astro.props as { schema: FormSchema; name: string, value: any };
 ---
 
 <InputLayout schema={schema} name={name}>
-  <input
-    type="date"
-    name={name}
-    class="rounded-md border-gray-300 placeholder:italic text-gray-800 placeholder:text-gray-300"
-  />
+  <input type="date" name={name} value={value}
+    class="rounded-md border-gray-300 placeholder:italic text-gray-800 placeholder:text-gray-300" />
 </InputLayout>
