--- a/packages/demo/src/pages/index.astro
+++ b/packages/demo/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
-import schema from "../util/schema";
-import { Form } from "astro-forms";
-import tailwind from "astro-forms/themes/tailwind";
+import schema, { sampleData } from "../util/schema";
+import { Form } from "../../../astro-forms";
+import tailwind from "../../../astro-forms/themes/tailwind";
+
 ---
 
 <html lang="en">
@@ -19,7 +20,7 @@ import tailwind from "astro-forms/themes/tailwind";
     </h1>
 
     <div class="max-w-4xl mx-auto">
-      <Form schema={schema} theme={tailwind} action="/" method="post" />
+      <Form schema={schema} data={sampleData} theme={tailwind} action="/" method="post" />
     </div>
   </div>
 </body>
