feat: dark mode

--- a/packages/astro-forms/themes/tailwind/DateInput.astro
+++ b/packages/astro-forms/themes/tailwind/DateInput.astro
@@ -7,5 +7,5 @@ const { schema, name, value } = Astro.props as { schema: FormSchema; name: strin
 
 <InputLayout schema={schema} name={name}>
   <input type="date" name={name} value={value}
-    class="rounded-md border-gray-300 placeholder:italic text-gray-800 placeholder:text-gray-300" />
+    class="rounded-md border-gray-300 placeholder:italic text-gray-800 dark:text-white dark:bg-gray-700 dark:border-none placeholder:text-gray-300" />
 </InputLayout>
