--- a/packages/astro-forms/themes/tailwind/StringInput.astro
+++ b/packages/astro-forms/themes/tailwind/StringInput.astro
@@ -29,6 +29,6 @@ const getInputType = () => {
 
 <InputLayout schema={schema} name={name}>
   <input type={getInputType()} name={name} id={name} value={value}
-    class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md"
+    class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 dark:bg-gray-700 dark:text-white dark:border-none rounded-md"
     placeholder="Enter a value..." />
 </InputLayout>
