--- a/packages/demo/src/pages/index.astro
+++ b/packages/demo/src/pages/index.astro
@@ -13,9 +13,9 @@ import tailwind from "../../../astro-forms/themes/tailwind";
   <title>Astro Forms</title>
 </head>
 
-<body>
+<body class="dark:bg-gray-900">
   <div class="py-8">
-    <h1 class="font-bold text-2xl text-center">
+    <h1 class="font-bold text-2xl text-center dark:text-white">
       Astro Forms Example (TailwindCSS)
     </h1>
 
