--- a/packages/astro-forms/Form.astro
+++ b/packages/astro-forms/Form.astro
@@ -1,5 +1,5 @@
 ---
-import { GenericTheme } from "./Themes";
+import { GenericTheme } from "./themes";
 import { Theme, FormSchema } from "./types";
 import { flatten } from "./util";
 
